feat: integrate issued ticket
