# implementation/backend/app/server/handler/orders/base_order_handler.go
@@ -8,6 +8,7 @@ import (
 	"net/http"
 	"tugas-akhir/backend/infrastructure/config"
 	"tugas-akhir/backend/internal/auth/entity"
+	entity3 "tugas-akhir/backend/internal/bookings/entity"
 	entity2 "tugas-akhir/backend/internal/orders/entity"
 	"tugas-akhir/backend/internal/orders/usecase/get_order"
 	"tugas-akhir/backend/internal/orders/usecase/place_order"
@@ -107,6 +108,44 @@ func (h *BaseOrderHandler) GetOrder(c echo.Context) error {
 	payload.UserID = &tokenClaim.UserID
 
 	result, httpErr := h.getOrderUsecase.GetOrder(ctx, payload)
+
+	if httpErr != nil {
+		httpErr.Log(ctx)
+		return c.JSON(httpErr.Code, httpErr)
+	}
+
+	return c.JSON(http.StatusOK, myerror.HttpPayload{
+		Data: result,
+	})
+}
+
+func (h *BaseOrderHandler) GetIssuedTickets(c echo.Context) error {
+	ctx := c.Request().Context()
+	var payload entity3.GetIssuedTicketDto
+
+	if err := c.Bind(&payload); err != nil {
+		return c.JSON(http.StatusBadRequest, myerror.HttpError{
+			Message: "Malformed payload",
+		})
+	}
+
+	validationError, err := h.validator.Validate(payload)
+
+	if err != nil {
+		return c.JSON(http.StatusBadRequest, myerror.HttpError{
+			Message: err.Error(),
+		})
+	}
+
+	if len(validationError) != 0 {
+		return c.JSON(http.StatusBadRequest, myerror.NewFromFieldError(validationError))
+	}
+
+	tokenClaim := c.Get(entity.JwtContextKey).(*entity.TokenClaim)
+
+	payload.UserID = &tokenClaim.UserID
+
+	result, httpErr := h.getOrderUsecase.GetIssuedTicket(ctx, payload)
 
 	if httpErr != nil {
 		httpErr.Log(ctx)
